# ftr_voter

./: README.md
programs/ftr_voter/: Cargo.toml
programs/ftr_voter/src/: lib.rs
tests/: ctest.js  ctest_z.js  ftr_mint_voter.txt  package-lock.json  package.json  poolAccount_voter.txt  poolFtr_voter.txt  poolSigner_voter.txt  userFtr_voter.txt
